change from File.toURL() to File.toURI().toURL()